Sat Oct  8 12:19:49 EEST 2011 (edwin)
-------------------------------------
 * libclamav/pdf.c: flag and dump PDF objects with /Launch (bb #3514)

Sat Oct  8 12:10:13 EEST 2011 (edwin)
-------------------------------------
 * libclamav/bytecode.c,bytecode_api.c: fix recursion level crash (bb #3706).

Mon Jul 25 16:09:19 EEST 2011 (edwin)
-------------------------------------
 * libclamav/bytecode_vm.c: fix opcode 20 error (bb #3100)

Thu Sep 15 14:44:11 CEST 2011 (tk)
----------------------------------
 * freshclam: fix pidfile removal (bb#3499)

Sun Aug 21 17:05:24 EEST 2011 (edwin)
-------------------------------------
 * libclamav/pdf.c:  fix incorrect blocking of some encrypted PDF with empty user passwords. (bb #3364)

Wed Aug  3 15:41:28 CEST 2011 (tk)
----------------------------------
 * sigtool/sigtool.c: fix calculation of max signature length

Tue Aug  2 17:03:33 CEST 2011 (tk)
----------------------------------
 * V 0.97.2

Mon Jul 25 14:33:59 CEST 2011 (acab)
------------------------------------
 * libclamav/matcher-hash.c: off by one read in cli_hm_scan (bb#2818)

Thu Jul 14 12:29:17 EEST 2011 (edwin)
------------------------------------
 * libclamav/pdf.c: fix encrypted pdf detection (bb #2988)

Thu Jul 14 12:20:04 CEST 2011 (acab)
------------------------------------
 * clamav-milter/clamfi.c: fix typo in error message (bb#3040)

Thu Jul 14 12:07:04 CEST 2011 (acab)
------------------------------------
 * libclamav/lzma_iface.c: shut up huge alloc warns for 7z/lzma (bb#2913)

Thu Jun 30 14:24:34 EEST 2011 (edwin)
-------------------------------------
 * libclamav/c++/bytecode2llvm.cpp: fix use of unaddressable data in
 bytecode_watchdog. Thanks to Michael Scheidell for providing feedback on this bug.

Tue Jun 7 12:03:19 EEST 2011 (edwin)
------------------------------------
 * libclamav/phishcheck.c: fix safebrowsing detection on certain URLs

Thu Jun  9 09:10:49 CEST 2011 (tk)
----------------------------------
 * V 0.97.1
